[gd_scene load_steps=2 format=3 uid="uid://c8qvt5qjkuv7q"]

[ext_resource type="Script" path="res://scenes/test/ability_test.gd" id="1_yvmqe"]

[node name="AbilityTest" type="Node2D"]
script = ExtResource("1_yvmqe")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1024.0
offset_bottom = 600.0
color = Color(0.2, 0.2, 0.2, 1.0)

[node name="TestControls" type="VBoxContainer" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 580.0

[node name="Label" type="Label" parent="TestControls"]
layout_mode = 2
text = "技能测试"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="TestControls"]
layout_mode = 2

[node name="CreatePieceButton" type="Button" parent="TestControls"]
layout_mode = 2
text = "创建棋子"

[node name="PieceTypeOption" type="OptionButton" parent="TestControls"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="TestControls"]
layout_mode = 2

[node name="ActivateAbilityButton" type="Button" parent="TestControls"]
layout_mode = 2
text = "激活技能"

[node name="HSeparator3" type="HSeparator" parent="TestControls"]
layout_mode = 2

[node name="ClearButton" type="Button" parent="TestControls"]
layout_mode = 2
text = "清除所有棋子"

[node name="TestArea" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 240.0
offset_top = 20.0
offset_right = 1004.0
offset_bottom = 580.0

[node name="TestAreaBackground" type="ColorRect" parent="TestArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.15, 1.0)

[node name="GridContainer" type="GridContainer" parent="TestArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 8

[connection signal="pressed" from="TestControls/CreatePieceButton" to="." method="_on_create_piece_button_pressed"]
[connection signal="pressed" from="TestControls/ActivateAbilityButton" to="." method="_on_activate_ability_button_pressed"]
[connection signal="pressed" from="TestControls/ClearButton" to="." method="_on_clear_button_pressed"]
